# Lexodus

./: .env  .gitignore  Cargo.toml  Makefile.toml  README.md  Untitled  approach.md  package-lock.json  runtime-config-example.toml  server..md  spin.toml  sructure.md  tailwind.config.js
.github/workflows/: deploy.yaml  rust-clippy.yml
.spin/: sqlite_db.db  sqlite_key_value.db
.spin/logs/: ocfs-spin-ssr_stderr.txt
db/: 00_test.sql  02__court_system.sql  04__document_management.sql  11_fees_resources.sql
db/migrations/: 20240211195825_users.sql  20240211195850_posts.sql  V1__core_auth.sql  V3__case_management.sql  V5__communication.sql  V6__motions_management.sql  V7__workflow_calendar.sql  V9__performance_optimizations.sql  drop.sql  initial.sql  mockdata.sql  query.examples  testdata.sql  v11_fees_resources.sql
docs/: case_creation.md  case_number.md  client.md  database.md  security.md  service.md  testing.md
k8s/postgres/: deployment.yaml
migrations/: 0002_core_auth.sql  20241115212437_audit_security.sql  20241115212508_reporting_views.sql  20241115212527_performance_optimizations.sql  20241115212543_fees_resources.sql  20241115222930_api_setup.sql  20241115222931_mock_data.sql
src/: app.rs  error_template.rs  errors.rs  lib.rs  main.rs  mod.rs  pg_session.rs  routes.rs  server.rs  session.rs
src/application/: README.md
src/application/commands/: create_case.rs  create_mdl_proceeding.rs  create_user.rs  examples.rs  mod.rs  update_case.rs
src/application/queries/: get_case.rs  get_case_notifications.rs  get_court_orders.rs  get_filing_deadlines.rs  mod.rs
src/application/services/: ai_service.rs  case_service.rs  mod.rs  user_service.rs
src/components/: action_menu.rs  case_notifications.rs  court_orders.rs  filing_deadlines.rs  footer.rs  hearing_schedules.rs  mod.rs  nav.rs  recent_case_activity.rs  search_bar.rs
src/domain/: README.md
src/domain/models/: case.rs  case_management.rs  case_notification.rs  court_order.rs  examples  filing_deadline.rs  hearing_schedule.rs  mdl.rs  mod.rs  new_case.rs  recent_case_activity.rs  search.rs  user.rs  user_activity.rs
src/domain/repositories/: case_repository.rs  mdl_repository.rs  mod.rs  pg_mdl_repository.rs  user_repository.rs
src/domain/services/: README.md  auth_service.rs  case_number_services.rs  case_service.rs  generate_mdl_number.rs  mod.rs
src/functions/: auth.rs  mod.rs  rbac.rs  save_count.rs  user.rs
src/infrastructure/: mod.rs
src/infrastructure/di/: README.md  container.rs
src/infrastructure/logging/: README.md  mod.rs  security_logger.rs
src/infrastructure/repositories/: mod.rs  pg_case_repository.rs  pg_mdl_repository.rs  pg_user_repository.rs  postgres_user_repository.rs
src/infrastructure/server/: errors.rs  mod.rs
src/layouts/: default.rs  mod.rs  wide.rs
src/models/: case.rs  case_notification.rs  civil_case.rs  court_order.rs  filing_deadline.rs  hearing_schedule.rs  mod.rs  recent_case_activity.rs  user.rs
src/pages/: activity.rs  changelog.rs  dashboard.rs  home.rs  homepage.rs  login.rs  mod.rs
src/pages/cases/: add.rs  create.rs  edit_case.rs  example  list_case.rs  mod.rs  search_case.rs  view_case.rs
src/pages/parties/: create.rs
src/pages/user_management/: create.rs
src/presentation/: mod.rs
src/presentation/api/: mod.rs  user.rs
src/presentation/components/: action_menu.rs  case_notifications.rs  court_orders.rs  filing_deadlines.rs  footer.rs  hearing_schedules.rs  mod.rs  nav.rs  recent_case_activity.rs  search_bar.rs  user_list.rs
src/presentation/layouts/: default.rs  mod.rs  wide.rs
src/presentation/pages/: activity.rs  changelog.rs  homepage.rs  mod.rs
src/providers/: auth.rs  mod.rs
src/services/: case_service.rs  get_action.rs  get_case_notifications.rs  get_court_orders.rs  get_filing_deadlines.rs  get_hearing_schedules.rs  get_recent_case_activities.rs  mod.rs
styles/: input.css
wasi/spin-fileserver/: spin_static_fs.wasm
(+18 files in other folders)
