[package]
name = "lexodus"
authors = ["Tyler Harpool <tylerharpool@gmail.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
cfg-if = "1"
console_error_panic_hook = "0.1"
http = "1.1"
leptos = { version = "0.6.15" }
leptos_integration_utils = { version = "0.6.6", optional = true }
leptos_meta = "0.6.6"
leptos_router = "0.6.6"
leptos-spin = { version = "0.2.0", optional = true }
serde = "1.0.192"
serde_json = "1.0"
tracing = "0.1.40"
spin-sdk = { version = "3", optional = true }
wasm-bindgen = { version = "=0.2.93", optional = true }
# Date Time Utils
chrono = { version = "0.4.33", features = ["serde"] }
colored = "2.0.0"
validator = { version = "0.18.1", features = ["derive"] }
uuid = { version = "1.3", features = ["v4"] }
async-session = { version = "3.0.0", optional = true }
async-trait = "0.1.77"

thiserror = "1.0.64"
miette = "7.2.0"
strum = { version = "0.26.1"}
strum_macros = { version = "0.26.1" }
serde-wasm-bindgen = "0.6.5"

cookie = "0.18.0"
serde_with = "3.6.1"
xml = "0.8.10"
futures-util = "0.3.30"
argon2 = { version = "0.5.3", optional = true }
rand_core = { version = "0.6.4", optional = true }
log = "0.4.22"
# sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
[workspace]

[features]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
hydrate = [
    "leptos/hydrate",
    "leptos_meta/hydrate",
    "leptos_router/hydrate",
    "dep:wasm-bindgen",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos/spin",
    "dep:spin-sdk",
    "dep:leptos-spin",
    "dep:leptos_integration_utils",
    "dep:async-session",
      "dep:argon2",
      "dep:rand_core",
]

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "lexodus"
tailwind-input-file = "styles/input.css"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
assets-dir = "public"
